--- a/style.css
+++ b/style.css
@@ -152,7 +152,7 @@ button {
 .navbar__toggle-btn {
   position: absolute;
   top: 24px;
-  font-size: 26px;
+  font-size: var(--font-medium);
   color: var(--color-white);
   right: 32px;
   display: none;
@@ -307,6 +307,7 @@ button {
   border-radius: var(--size-border-radius);
   font-size: var(--font-regular);
   padding: 8px 48px;
+  position: relative;
 }
 
 .category__btn:hover {
@@ -327,9 +328,9 @@ button {
   height: 24px;
   line-height: 24px;
   display: inline-block;
-  position: relative;
+  position: absolute;
   top: -20px;
-  left: 5px;
+  right: 16px;
   opacity: 0;
   transition: all var(--animation-duration) ease-in;
 }
@@ -433,16 +434,26 @@ button {
     display: flex;
   }
 
+  section {
+    padding: 16px;
+  }
+
   .about__majors {
     flex-direction: column;
+    margin-top: 30px;
+    margin-bottom: 0px;
   }
 
   .major {
-    margin-bottom: 38px;
+    margin-bottom: 30px;
   }
 
   .skillset {
     flex-direction: column;
+  }
+
+  .category__btn {
+    margin: 4px 0;
   }
 
   .project {
